# ptc_gui

./: Cargo.toml  readme.md
gui/: Cargo.toml
gui/src/: auth.rs  bootstrap.rs  config.rs  cryptor.rs  form.rs  main.rs  registry.rs  registry_repository.rs  settings.rs  support.rs  user.rs  user_repositiry_fs.rs
gui/src/auth/: auth_data.rs  auth_fs.rs  auth_service.rs  form.rs
gui/src/footer/: form.rs
gui/src/form/: main_form.rs  mod.rs
gui/src/generate_password/: form.rs  generate_password_form_data.rs  mod.rs  password_generator.rs
gui/src/menu/: form.rs
gui/src/note/: mod.rs  note.rs  note_repository.rs  note_repository_fs.rs
gui/src/notebook/: form.rs  mod.rs
gui/src/notebook/add/: form.rs  mod.rs  note_add_form_data.rs  note_add_form_facade.rs  note_add_service.rs
gui/src/notebook/list/: mod.rs  note_list_form_data.rs  note_list_service.rs  note_list_typed_cache.rs
gui/src/notebook/report/: form.rs  mod.rs  note_report_service.rs  note_summary_data.rs  note_summary_typed_cache.rs
gui/src/resource/: mod.rs  resource.rs  resource_repository.rs  resource_repository_fs.rs
gui/src/resource_add/: form.rs  mod.rs  resource_add_form_data.rs  resource_add_form_facade.rs  resource_add_service.rs
gui/src/resource_list/: form.rs  mod.rs  resource_list_form_data.rs  resource_list_service.rs  resource_list_typed_cache.rs
gui/src/support/: fs.rs
gui/src/support/fs/: maker.rs  save.rs
gui/src/tag/: mod.rs  tag_repository.rs  tag_repository_fs.rs  tag_service.rs
gui/src/user/: mod.rs  user_repositiry_fs.rs
